--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     background-attachment: fixed;
     background-color: black;
     background-size: cover;
+
 }
 
 header {
@@ -108,10 +109,10 @@ h2 {
 header>h1 {
     font-family: var(--fontHeader);
     text-align: center;
-    margin-top: 500px;
-    font-size: 7em;
+    margin-top: 100px;
+    font-size: 6em;
     color: black;
-    width: 600px;
+    width: 500px;
     height: 500px;
 }
 
@@ -167,8 +168,77 @@ p {
     padding: 150px;
 }
 
+.regiao-Administrativa-de-Sao-Jose-dos-Campos {
+    background-image: url(/img/bg-sao-jose-dos-campos.jpg);
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: black;
+    text-shadow: 7px 5px 2px black;
+    color: white;
+    height: 1200px;
+    font-size: 10em;
+    text-align: center;
+    padding-top: 250px;
+    font-family: var(--fontHeader);
+}
+
+.text-regiao-Administrativa-de-Sao-Jose-dos-Campos {
+    background-color: rgba(255, 255, 255, 0.801);
+    color: black;
+    text-align: justify;
+    font-size: 4em;
+    padding: 150px;
+}
+
+.Regiao-Metropolitana-do-Vale-do-Paraiba-e-Litoral-Norte {
+    background-image: url(/img/bg-serra-da-mantiqueira.jpg);
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: black;
+    text-shadow: 7px 5px 2px black;
+    color: white;
+    height: 1200px;
+    font-size: 10em;
+    text-align: center;
+    padding-top: 250px;
+    font-family: var(--fontHeader);
+}
+
+.text-Regiao-Metropolitana-do-Vale-do-Paraiba-e-Litoral-Norte {
+    background-color: rgba(255, 255, 255, 0.801);
+    color: black;
+    text-align: justify;
+    font-size: 4em;
+    padding: 150px;
+}
+
+.Regiao-Administrativa-de-Sorocaba {
+    background-image: url(/img/bg-RA-Sorocaba.jpeg);
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: black;
+    text-shadow: 7px 5px 2px black;
+    color: white;
+    height: 1200px;
+    font-size: 10em;
+    text-align: center;
+    padding-top: 250px;
+    font-family: var(--fontHeader);
+}
+
+.text-Regiao-Administrativa-de-Sorocaba {
+    background-color: rgba(255, 255, 255, 0.801);
+    color: black;
+    text-align: justify;
+    font-size: 4em;
+    padding: 150px;
+}
 
 
+/*rodape*/
 footer>p {
     background-color: rgba(61, 20, 20, 0.61);
     font-family: var(--fontText);
