--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ a:hover {
     box-shadow: 3px 3px 1px black;
 }
 
+a:active {
+    background-color: black;
+    transform: 1s;
+}
+
 body {
     background-image: url(/img/bg-pexels-caroline-cagnin-2065848.jpg);
     background-repeat: no-repeat;
@@ -45,7 +50,7 @@ body {
 }
 
 header {
-    background-color: rgba(61, 20, 20, 0.61);
+    background-color: rgba(117, 114, 114, 0.61);
 }
 
 nav {
@@ -65,6 +70,12 @@ h1 {
     font-family: var(--fontHeader);
     text-shadow: 1px 1px 7px black;
     font-weight: bold;
+}
+
+h1:hover {
+    font-size: 17em;
+    transition: 1s;
+
 }
 
 .home {
@@ -547,20 +558,21 @@ p {
     padding: 150px;
 }
 
-.regiao-metropolitana-de-são-paulo {
+
+.Regiao-Metropolitana-de-São-Paulo {
     background-image: url(/img/bg-RM-São_Paulo_city_\(Bela_Vista\).jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
+    color: white;
     height: 1200px;
+    font-family: var(--fontHeader);
     font-weight: bold;
     font-size: 10em;
     text-align: center;
-    color: white;
     text-shadow: 7px 7px 2px black;
     padding-top: 250px;
-    font-family: var(--fontHeader);
 }
 
 .text-Regiao-Metropolitana-de-São-Paulo {
@@ -574,7 +586,7 @@ p {
 
 /*rodape*/
 footer>p {
-    background-color: rgba(61, 20, 20, 0.61);
+    background-color: rgba(117, 114, 114, 0.61);
     font-family: var(--fontText);
     text-align: center;
     font-size: 3em;
